tests/specs/ecosystem/sylc/step_spinner/0_0_1.test
sylc/step-spinner/0.0.1
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/cli@0.224.0": "jsr:@std/cli@0.224.0"
    },
    "jsr": {
      "@std/cli@0.224.0": {
        "integrity": "2612373d68984637bdad8b9c9dd160e9838ac2a6d463354d537d2897a7cc6d1c"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2377 [ERROR]: Constructors for derived classes must contain a 'super' call.
  constructor(msg: string | SpinnerOptions){}
  ~~~~~~~~~~~
    at file://<tmpdir>/StepSpinner.ts:4:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Spinner'.
  start(): StepSpinner {
  ~~~~~
    at file://<tmpdir>/StepSpinner.ts:5:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Spinner'.
  stop(): void {}
  ~~~~
    at file://<tmpdir>/StepSpinner.ts:8:3

Found 3 errors.

